arch: arm64: Make dtbo.img as option
Signed-off-by: alanndz <alanndz7@gmail.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1488,6 +1488,13 @@ config BUILD_ARM64_DT_OVERLAY
 	depends on OF
 	help
 	  This option enables support for DT overlay compilation.
+
+config BUILD_ARM64_DTBO_IMG
+	bool "Include dtbo.img"
+	default n
+	depends on BUILD_ARM64_DT_OVERLAY
+	help
+	  This option will build dtbo.img
 endmenu
 
 menu "Userspace binary formats"
