Let start aLn again
Signed-off-by: alanndz <alanndz7@gmail.com>

--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -1,5 +1,7 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_TOOLS_SUPPORT_RELR=y
+CONFIG_LOCALVERSION="-aLn"
+# CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -99,7 +101,7 @@ CONFIG_CMDLINE="cgroup_disable=pressure"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_ARM64_DTBO_RESTRICTED=y
-CONFIG_ARM64_DTBO_RESTRICTED_ID="kyrielight-vayu"
+CONFIG_ARM64_DTBO_RESTRICTED_ID="aln-vayu"
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 CONFIG_KRYO_PMU_WORKAROUND=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
